fix size jumping around issues

--- a/example-vs-cornerstone/src/App.css
+++ b/example-vs-cornerstone/src/App.css
@@ -55,6 +55,7 @@ p {
 button {
 	margin-right: 0.5em;
 	white-space: nowrap;
+	outline: none;
 }
 
 button, ::-webkit-file-upload-button {
@@ -97,32 +98,37 @@ button svg {
 
 a {
 	color: hotpink;
-  }
+}
 
-  section {
+section {
 	display: flex;
 	width: 100%;
 	max-width: 1000px;
 	padding: 2em 0;
 	border-bottom: 1px solid rgb(242, 242, 242);
-  }
+}
 
-  .canvas-container {
-	  display: flex;
-	  flex: 1;
-	  justify-content: center;
-	  align-items: center;
-	  background: rgb(242, 242, 242);
-	  height: 400px;
-	  padding: 1em;
-	  margin-bottom: 1em;
-	  overflow: hidden;
-  }
+.canvas-container {
+	display: flex;
+	flex: 1;
+	justify-content: center;
+	align-items: center;
+	background: rgb(242, 242, 242);
+	height: 400px;
+	max-height: 400px;
+	padding: 1em;
+	margin-bottom: 1em;
+	overflow: hidden;
+}
 
-  .canvas-container canvas {
+.canvas-container canvas {
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
 }
 
-  
+.cornerstone-container {
+	width: 100%;
+	height: 100%;
+}
+
